<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >


        <TextView android:id="@+id/labelCurrentLevel"
            android:text="@string/current_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView android:id="@+id/currentLevel"
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView android:text="@string/choose_destination_level"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView android:id="@+id/destinationLevel"
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/buttonLevel1" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:id="@+id/buttonLevel2" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:id="@+id/buttonLevel3" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:id="@+id/buttonLevel4" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/buttonLevel5" />
        </GridLayout>


        <TextView android:text="@string/velocity"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_velocity"
            />

        <TextView android:text="@string/label_change_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_change_color"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_go_text"
            android:id="@+id/buttonGo" />





    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".MainActivity"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/lift_margin"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/lift_margin"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/lift_margin"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/lift_margin"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/lift_margin"
            android:id="@+id/textView1" />

    </LinearLayout>


</LinearLayout>
